--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,5 +1,10 @@
 <div class="row">
   <div class="col-md-12">
+
+    <%= link_to("清空购物车", clean_carts_path,
+                  method: :delete, clase:"pull-right",
+                  style: "text-decoration: underline;",
+                  data: {confirm: "你确定要清空整个购物车嘛？"}) %>
     <h2>购物车</h2>
 
     <table class="table table-bordered">
