--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -19,7 +19,7 @@
 
   <% if @product.image.present? %>
     <span>目前商品图</span> <br>
-    <%= image_tag(@product.iamge.thumb.url) %>
+    <%= image_tag(@product.image.thumb.url) %>
   <% end %>
 
   <div class="group">
